--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <button v-on:click.middle="reduce(5)">Reduce 5</button>
       <button v-on:click="reset">Reset</button>
 
+      <p v-once>Starting Counter: {{ counter }}</p>
       <p>Result: {{ counter }}</p>
 
       <input
